--- a/resources/less/app.less
+++ b/resources/less/app.less
@@ -1,3 +1,7 @@
 @import "tailwindcss/base";
 @import "tailwindcss/components";
+
+// import components
+@import "components/homepage.less";
+
 @import "tailwindcss/utilities";
